# ai-candidate-screening

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  clean_candidates.py  cleaned_candidates.csv  pyproject.toml  requirements.txt  seed_database.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_12_29_1937-0eda47420c61_create_candidate_table.py
backend/app/: config.py  database.py  main.py  model.joblib  model_training.py  models.py  schemas.py  vectorizer.joblib
backend/app/routes/: candidates.py
backend/app/utils/: pdf_utils.py
backend/conf/: .env.sample
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
