[tool.poetry]
name = "python_challenge"
version = "0.1.0"
description = "AI-Powered Candidate Screening and Scoring System"
authors = ["Cosmel Villalobos cosmelvg@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^1.23.0"
pandas = "^2.0.0"
fastapi = {version = "^0.115.2", extras = ["standard"]}
uvicorn = "^0.31.1"
scikit-learn = "^1.0.2"
joblib = "^1.0.1"
sqlalchemy = "~2.0.0"
alembic = "^1.13.3"
pydantic = "~2.9.2"
pydantic-settings = "^2.6.0"
psycopg2-binary = "~2.9.0"
httpx = "~0.27"
python-multipart = "^0.0.19"
pytest = "~8.3.0"
pytest-asyncio = "^0.24.0"
python-dateutil = "^2.9.0.post0"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
